@@ -152,6 +152,7 @@ public class ChildAxisTest {
     final IWriteTransaction wtx = session.beginWriteTransaction();
     TestDocument.create(wtx);
     wtx.commit();
+    session.close();
 
     final ISession session1 = Session.beginSession(TEST_PERSISTENT_PATH);
     final IReadTransaction rtx = session1.beginReadTransaction();
